--- a/public/melhores filmes .html
+++ b/public/melhores filmes .html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
 <h1>os melhores filmes de acordos com Pedro</h1>
 <h2>meu top 3 filmes de todos os tempos </h2>
 <hr/>
@@ -7,3 +15,5 @@
 <p>para mim o melhor filme do tarantino</p>
 <h3>superbad</h3>
 <p>a melhor comédia que já vi</p>
+</body>
+</html>
