--- a/public/catsite.html
+++ b/public/catsite.html
@@ -1,4 +1,14 @@
-<h1>Welcome to My Website!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+h1>Welcome to My Website!</h1>
 <img src="../assets/images/cat.png" alt="">
 <hr />
 <a href="contact.html">Contact me</a>
+</body>
+</html><
